[package]
name = "transformer"
version = "1.0.0"
edition = "2021"
description = "A CLI tool to convert between JSON, TOML, and YAML, reading from stdin."

[dependencies]
# Error handling
anyhow = "1.0"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help"] }

# Ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.11"
toml = "0.8"

# Optimize for size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
