[package]
name = "transformer"
version = "1.1.1"
edition = "2021"
description = "A CLI tool to convert from JSON|TOML|YAML to JSON|TOML|YAML|Rust serde structs."

[dependencies]
# Error handling
anyhow = "1.0"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help"] }
json_typegen_shared = "0.7.0"

# Ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"

# Optimize for size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
