[package]
name = "transformer"
version = "1.2.0"
edition = "2021"
description = "A CLI tool to convert from JSON|TOML|YAML to JSON|TOML|YAML|Rust serde structs."

[dependencies]
# Error handling
anyhow = "1.0"

# Command-line argument parsing
clap = { version = "4.5", features = ["derive", "wrap_help"] }
json_typegen_shared = { git = "https://github.com/kyoufujibayashai/json_typegen", rev = "6fdeee6e18802e684e1653dab7cbe46d6d395a84" }

# Ser/de
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
toml = "0.8"

# Optimize for size
[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
